[package]
name = "wasm_bindgen_futures_jsfuture"
version = "0.1.0"
authors = ["WebAssemblyMan"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.32"
wasm-bindgen = "0.2.55"
wasm-bindgen-futures = "0.4.7"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Window',
  'console',
  'Request',
  'Url',
  'Blob',
  'Response',
  'HtmlImageElement',
   'Node',
     'Element',
  'HtmlElement',
  'HtmlBodyElement',

]
