[package]
name = "web_sys_console"
version = "0.1.0"
authors = ["WebAssemblyMan"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.51"

[dependencies.js-sys]
version = "0.3.4"

[dependencies.web-sys]
version = "0.3.4"

features = [
  'console',
]