[package]
name = "web_sys_fontface"
version = "0.1.0"
authors = ["WebAssemblyMan"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.32"
wasm-bindgen = "0.2.55"
gloo = "0.2.0"
wasm-bindgen-futures = "0.4.7"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Attr',
  'CssStyleDeclaration',
  'Document',
  'Element',
  'HtmlElement',
  'HtmlDivElement',
  'HtmlLiElement',
  'HtmlUListElement',
  'SvgElement',
  'SvgRectElement',
  'SvgTitleElement',
  'SvgDescElement',
  'Node',
  'Window',
  'console',
  'FontFace',
  'FontFaceSet'
]
